fix(gui): Explorer double-reopen-to-refresh issue (#296)
fix(gui): Darkmode Scrollbar style
refactor(gui): Double-click to open with default way (associations)

--- a/ui/web/src/modules/DesktopLayout/index.css
+++ b/ui/web/src/modules/DesktopLayout/index.css
@@ -2,6 +2,10 @@
   background-image: none;
 }
 
+body[theme-mode='dark'] {
+  color-scheme: dark;
+}
+
 body[theme-mode='dark'] .flexlayout__tab {
   background-color: #141414;
 }
